おもろい動き

--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>繋げるエール</title>
+    <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
-    <h1>卒制のウェブサイトです。</h1>
+    <header>
+
+    </header>
+
+    <main>
+        <div class="mainwrapp">
+            <div class="mainwrapp__bg">
+                <div class="mainwrapp__bg__centerbg">
+                    <h1>あいうえお</h1>
+                    <div class="hako">
+                        <div class="hako2">
+                            <p>aiueo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
